tests/compile_fail/invalid_size_attr.stderr
error: expected attribute arguments in parentheses: `size(...)`
 --> tests/compile_fail/invalid_size_attr.rs:7:14
  |
7 |     #[shader(size)]
  |              ^^^^

error: expected u32 literal or `runtime` identifier
 --> tests/compile_fail/invalid_size_attr.rs:9:19
  |
9 |     #[shader(size())]
  |                   ^

error: expected u32 literal or `runtime` identifier
  --> tests/compile_fail/invalid_size_attr.rs:11:19
   |
11 |     #[shader(size(invalid))]
   |                   ^^^^^^^

error: only the last field can be `size(runtime)`
  --> tests/compile_fail/invalid_size_attr.rs:13:19
   |
13 |     #[shader(size(runtime))]
   |                   ^^^^^^^

error: expected u32 literal or `runtime` identifier
  --> tests/compile_fail/invalid_size_attr.rs:15:19
   |
15 |     #[shader(size(-1))]
   |                   ^
